--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#!">Browse <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/browse.html">Browse <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="#!">Blog <span class="sr-only">(current)</span></a>
@@ -62,7 +62,7 @@
                 <p class="lead">Vintage and thrifted pieces inspired by a love for classic feminine shapes and styles</p>
                 <hr class="my-2">
                 <p class="lead">
-                  <a class="btn btn-primary btn-md" href="#!" role="button">Browse Recent Finds</a>
+                  <a class="btn btn-primary btn-md" href="/browse.html" role="button">Browse Recent Finds</a>
                   <a class="btn btn-primary btn-md" href="#!" role="button">Film-Inspired Looks</a>
                 </p>
               </div>
