--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
               <div class="site-title">LOCKWOOD THRIFT</div>
           </div>
           <nav class="navbar navbar-expand-lg navbar-default navbar-light bg-white">
-            <a class="navbar-brand" href="#"><i class="fas fa-film"></i></a>
+            <a class="navbar-brand" href="/index.html"><i class="fas fa-film"></i></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/browse.html">Browse <span class="sr-only">(current)</span></a>
