--- a/browse.html
+++ b/browse.html
@@ -41,6 +41,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/browse.html">Browse <span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://www.instagram.com/lockwoodthrift/" target="_blank">Shop <span class="sr-only">(current)</span></a>
+                </li>
               </ul>
               
             </div>
@@ -59,7 +62,7 @@
                               <div class="card-body">
                                   <h5 class="card-title">Flirty Chambray Dress</h5>
                                   <p class="card-text">This chambray piece is perfect as a flirty dress or shirt over leggings.</p>
-                                  <a href="https://www.instagram.com/lockwoodthrift/" class="btn btn-primary stretched-link">Shop this look <i class="fas fa-shopping-basket"></i></a>
+                                  <a href="https://www.instagram.com/lockwoodthrift/" target="_blank" class="btn btn-primary stretched-link">Shop this look <i class="fas fa-shopping-basket"></i></a>
                               </div>
                           </div>
                       </div>
@@ -73,7 +76,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Classic Button-Up Dress</h5>
                                 <p class="card-text">We love the collar and classic silhouette of this tan cotton shirtdress.</p>
-                                <a href="https://www.instagram.com/lockwoodthrift/" class="btn btn-primary stretched-link">Shop this look <i class="fas fa-shopping-basket"></i></a>
+                                <a href="https://www.instagram.com/lockwoodthrift/" target="_blank" class="btn btn-primary stretched-link">Shop this look <i class="fas fa-shopping-basket"></i></a>
                             </div>
                         </div>
                     </div>
@@ -87,7 +90,7 @@
                           <div class="card-body">
                               <h5 class="card-title">Tastefully Tweed Dress</h5>
                               <p class="card-text">This navy Banana Republic dress is perfect for fall.</p>
-                              <a href="https://www.instagram.com/lockwoodthrift/" class="btn btn-primary stretched-link">Shop this look  <i class="fas fa-shopping-basket"></i></a>
+                              <a href="https://www.instagram.com/lockwoodthrift/" target="_blank" class="btn btn-primary stretched-link">Shop this look  <i class="fas fa-shopping-basket"></i></a>
                           </div>
                       </div>
                   </div>
@@ -103,7 +106,7 @@
           <div class="container-fluid col-sm-10 col-12">
             <div class="row footer">
                 <div class="col-sm col-3">
-                    <a href="https://www.instagram.com/lockwoodthrift/" class="btn btn-link" role="button"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://www.instagram.com/lockwoodthrift/" class="btn btn-link" target="_blank" role="button"><i class="fab fa-instagram fa-2x"></i></a>
 
                 </div>
                 <div class="col-sm col-5 row">
