--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/browse.html">Browse <span class="sr-only">(current)</span></a>
                   </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="https://www.instagram.com/lockwoodthrift/" target="_blank">Shop <span class="sr-only">(current)</span></a>
+                </li>
               </ul>
             </div>
           </nav>
@@ -72,7 +75,7 @@
             <div class="container-fluid col-sm-10 col-12">
                 <div class="row footer">
                     <div class="col-sm col-3">
-                        <a href="https://www.instagram.com/lockwoodthrift/" class="btn btn-link" role="button"><i class="fab fa-instagram fa-2x"></i></a>
+                        <a href="https://www.instagram.com/lockwoodthrift/" class="btn btn-link"  target="_blank" role="button"><i class="fab fa-instagram fa-2x"></i></a>
                         
                     </div>
                     <div class="col-sm col-5 row">
